# Whitelist-Token-Contract-1

./: Anchor.toml  README.md  package-lock.json  package.json
programs/my-anchor-project1/: Cargo.toml
programs/my-anchor-project1/src/: lib.rs
tests/: my-anchor-project1.ts
