[package]
name = "my_sohail"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_sohail"
[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


# this is best dependacne for fixt the issues and resolve the error
# [dependencies]
# anchor-lang = "0.29.0" 

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.5"  # Matches the Solana version your project targets




